Major code refactor
Signed-off-by: Flytre <flytre7@gmail.com>